[gd_scene load_steps=8 format=2]

[ext_resource path="res://MiniMap/MiniMap.gd" type="Script" id=1]
[ext_resource path="res://MiniMap/MapUI.gd" type="Script" id=2]
[ext_resource path="res://MiniMap/MiniMapCamera.gd" type="Script" id=3]
[ext_resource path="res://MiniMap/MiniRoomConnect.gd" type="Script" id=4]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.458824 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.705882 ), Color( 0, 0, 0, 0.458824 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.458824 ), Color( 0, 0, 0, 0.705882 ) ]
}

[node name="MiniMap" type="Node2D"]
script = ExtResource( 1 )

[node name="MapUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1000, 1000 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomControl" type="Node2D" parent="MapUI"]

[node name="Level-1" type="Position2D" parent="MapUI/RoomControl"]
visible = false
position = Vector2( 500, 500 )
z_index = -1

[node name="DownLevel" type="ColorRect" parent="MapUI/RoomControl/Level-1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -500.0
margin_right = 500.0
margin_bottom = 500.0
rect_min_size = Vector2( 1000, 1000 )
color = Color( 0.34902, 0.34902, 0.34902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level0" type="Position2D" parent="MapUI/RoomControl"]
position = Vector2( 500, 500 )

[node name="MiddleRect" type="ColorRect" parent="MapUI/RoomControl/Level0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -500.0
margin_right = 500.0
margin_bottom = 500.0
rect_min_size = Vector2( 1000, 1000 )
color = Color( 0.34902, 0.34902, 0.34902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="Position2D" parent="MapUI/RoomControl"]
visible = false
position = Vector2( 500, 500 )
z_index = 1

[node name="UpLevel" type="ColorRect" parent="MapUI/RoomControl/Level1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -500.0
margin_right = 500.0
margin_bottom = 500.0
rect_min_size = Vector2( 1000, 1000 )
color = Color( 0.34902, 0.34902, 0.34902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level-Ready" type="Position2D" parent="MapUI/RoomControl"]
position = Vector2( -500, 500 )
z_index = -20

[node name="ReadyLevel" type="ColorRect" parent="MapUI/RoomControl/Level-Ready"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -500.0
margin_right = 500.0
margin_bottom = 500.0
rect_min_size = Vector2( 1000, 1000 )
color = Color( 0.34902, 0.34902, 0.34902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEast" type="Line2D" parent="MapUI"]
position = Vector2( 1448, 207 )
points = PoolVector2Array( 0, 0, 15, 0 )
width = 5.0
default_color = Color( 0.682353, 0.682353, 0.682353, 1 )
script = ExtResource( 4 )

[node name="LineNorth" type="Line2D" parent="MapUI"]
position = Vector2( 1381, 160 )
points = PoolVector2Array( 0, 0, 0, -15 )
width = 5.0
default_color = Color( 0.682353, 0.682353, 0.682353, 1 )
script = ExtResource( 4 )

[node name="LineWN" type="Line2D" parent="MapUI"]
position = Vector2( 1320, 167 )
points = PoolVector2Array( 0, 0, -25, -30 )
width = 5.0
default_color = Color( 0.682353, 0.682353, 0.682353, 1 )
script = ExtResource( 4 )

[node name="LineWS" type="Line2D" parent="MapUI"]
position = Vector2( 1464, 138 )
points = PoolVector2Array( 0, 0, -25, 30 )
width = 5.0
default_color = Color( 0.682353, 0.682353, 0.682353, 1 )
script = ExtResource( 4 )

[node name="LineEN" type="Line2D" parent="MapUI"]
position = Vector2( 1320, 246 )
points = PoolVector2Array( 0, 0, -25, 30 )
width = 5.0
default_color = Color( 0.682353, 0.682353, 0.682353, 1 )
script = ExtResource( 4 )

[node name="LineES" type="Line2D" parent="MapUI"]
position = Vector2( 1439, 253 )
points = PoolVector2Array( 0, 0, 25, 30 )
width = 5.0
default_color = Color( 0.682353, 0.682353, 0.682353, 1 )
script = ExtResource( 4 )

[node name="LineSouth" type="Line2D" parent="MapUI"]
position = Vector2( 1381, 249 )
points = PoolVector2Array( 0, 0, 0, 15 )
width = 5.0
default_color = Color( 0.682353, 0.682353, 0.682353, 1 )
script = ExtResource( 4 )

[node name="LineWest" type="Line2D" parent="MapUI"]
position = Vector2( 1312, 203 )
points = PoolVector2Array( 0, 0, -15, 0 )
width = 5.0
default_color = Color( 0.682353, 0.682353, 0.682353, 1 )
script = ExtResource( 4 )

[node name="CharacterPosition" type="Position2D" parent="MapUI"]
position = Vector2( 500, 500 )

[node name="MiniMapCamera" type="Camera2D" parent="MapUI/CharacterPosition"]
position = Vector2( 2, 0 )
current = true
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_drag_margin = true
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="MapUI/CharacterPosition"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -507.0
margin_top = -304.0
margin_right = 521.0
margin_bottom = 297.0
color = Color( 0, 0, 0, 0.458824 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="MapUI/CharacterPosition"]
anims/RESET = SubResource( 3 )
anims/in = SubResource( 2 )
anims/out = SubResource( 4 )
